infrastructure/network.tf
resource "azurerm_virtual_network" "keacloud" {
  name                = var.vnet_name
  address_space       = [var.vnet_address_space]
  location            = azurerm_resource_group.keacloud.location
  resource_group_name = azurerm_resource_group.keacloud.name
}

resource "azurerm_subnet" "keacloud" {
  name                 = var.subnet_name
  resource_group_name  = azurerm_resource_group.keacloud.name
  virtual_network_name = azurerm_virtual_network.keacloud.name
  address_prefixes     = [var.subnet_address_prefix]
}

resource "azurerm_public_ip" "keacloud" {
  name                = var.public_ip_name
  location            = azurerm_resource_group.keacloud.location
  resource_group_name = azurerm_resource_group.keacloud.name
  allocation_method   = var.public_ip_allocation_method
  sku                 = "Standard"
}

resource "azurerm_network_interface" "keacloud" {
  name                = var.nic_name
  location            = azurerm_resource_group.keacloud.location
  resource_group_name = azurerm_resource_group.keacloud.name

  ip_configuration {
    name                          = var.ip_configuration_name
    subnet_id                     = azurerm_subnet.keacloud.id
    private_ip_address_allocation = var.private_ip_allocation
    public_ip_address_id          = azurerm_public_ip.keacloud.id
  }
}

resource "azurerm_network_security_group" "keacloud_nsg" {
  name                = "keacloud-nsg"
  location            = azurerm_resource_group.keacloud.location
  resource_group_name = azurerm_resource_group.keacloud.name


  security_rule {
    name                       = "allow-80"
    priority                   = 100
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "80"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "allow-443"
    priority                   = 110
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "443"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

  security_rule {
    name                       = "allow-22"
    priority                   = 1000
    direction                  = "Inbound"
    access                     = "Allow"
    protocol                   = "Tcp"
    source_port_range          = "*"
    destination_port_range     = "22"
    source_address_prefix      = "*"
    destination_address_prefix = "*"
  }

}

resource "azurerm_network_interface_security_group_association" "keacloud" {
  network_interface_id      = azurerm_network_interface.keacloud.id
  network_security_group_id = azurerm_network_security_group.keacloud_nsg.id

  depends_on = [azurerm_network_security_group.keacloud_nsg]
}
